# bebop

./: LICENSE  README.md
bebop/: CMakeLists.txt  package.xml
bebop_arduino/: CMakeLists.txt  README.md  package.xml
bebop_arduino/firmware/: CMakeLists.txt  chassis.cpp
bebop_arduino/src/: bebop_arduino.ino
bebop_control/: CMakeLists.txt  package.xml
bebop_control/include/bebop_control/: common.h
bebop_msgs/: CMakeLists.txt  package.xml
bebop_msgs/bebop_control_msgs/: CMakeLists.txt  package.xml
bebop_msgs/bebop_control_msgs/msg/: ChassisCmd.msg
bebop_msgs/include/bebop_msgs/: topic.h
bebop_msgs/msg/: ChassisCmd.msg
bebop_tools/: CMakeLists.txt  package.xml
bebop_tools/src/: chassis_test.cpp
doc/drawio/: servo.drawio
doc/notes/: notes.md  setup-jetson-tx2-env.md
