<?xml version="1.0"?>
<package format="2">
  <name>bebop_arduino</name>
  <version>0.0.1</version>
  <description>The bebop_arduino package</description>

  <author>tsyxyz</author>
  <maintainer email="tsyxyz@hotmail.com">tsyxyz</maintainer>

  <author email="tsyxyz@hotmail.com">tsyxyz</author>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
