<?xml version="1.0"?>
<package format="2">
  <name>bebop_arduino</name>
  <version>0.0.1</version>
  <description>The bebop_arduino package</description>

  <author email="tsyxyz@hotmail.com">tsyxyz</author>
  <maintainer email="tsyxyz@hotmail.com">tsyxyz</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rosserial_arduino</build_depend>
  <build_depend>rosserial_client</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>bebop_msgs</build_depend>
  <build_export_depend>rosserial_arduino</build_export_depend>
  <build_export_depend>rosserial_client</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>bebop_msgs</build_export_depend>
  <exec_depend>rosserial_arduino</exec_depend>
  <exec_depend>rosserial_client</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>bebop_msgs</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
